--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,38 +1,47 @@
-$r: #ff3432;
+$r: #980201;
 $b: #1161a4;
 $o: #feb339;
-$g: #10c8b3;
-$y: #ffca58;
+$g: #1060c8;
+$y: #dedede;
 
-html, body, canvas {
-  margin: 0;
-  width: 100%;
-  height: 100%;
-  display: block;
+html,
+body,
+canvas {
   position: absolute;
   top: 0;
   left: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+}
+
+html {
+  font-size: 12px;
 }
 
 body {
   display: flex;
-  justify-content: center;
   align-items: center;
-  height: 100vh;
+  justify-content: center;
   overflow: hidden;
-  font-family: 'Josefin Sans', serif;
+  height: 100vh;
+  font: normal 1rem/1.2rem 'Josefin Sans', serif;
+  -webkit-font-smoothing: antialiased;
 
   * {
     box-sizing: border-box;
   }
 
-  #wrap {
-    position: absolute;
-    width: 500px;
-    height: 600px;
-    box-shadow: 0 10px 30px -10px rgba(0, 0, 0, 0.25);
+  main {
+    box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2);
+    position: relative;
+    border-radius: 0 5px 5px 0;
+    z-index: 1;
     overflow: hidden;
-    background: $b;
+    width: 600px;
+    height: 600px;
+    background: inherit;
 
     input {
       &:hover {
@@ -42,18 +51,16 @@ body {
 
     input[type='checkbox'] {
       position: absolute;
+      right: 0;
+      bottom: 0;
       width: 150px;
       height: 70px;
-      bottom: 0;
-      z-index: 999;
-      right: 0;
-      opacity: 0;
 
-      &:hover ~ .frame {
+      &:hover ~ section {
         .more {
           b {
             &:after {
-              background: #fff;
+              background-color: #fff;
             }
           }
         }
@@ -63,7 +70,7 @@ body {
         b {
           &:after {
             transition-delay: 0;
-            background: $g;
+            background-color: $g;
           }
         }
       }
@@ -84,16 +91,16 @@ body {
 
             &:before {
               transition-delay: 1.3s;
-              border-color: #fff;
               transform: scale(1);
+              border-color: #fff;
             }
           }
         }
       }
 
-      &:checked ~ .frame {
-        transform: translateX(-150%);
+      &:checked ~ section {
         transition-delay: 0.4s;
+        transform: translateX(-150%);
 
         .more {
           transform: scale(0);
@@ -131,9 +138,9 @@ body {
                         transform: translateX(0) skewX(0deg);
 
                         &:before {
+                          transition-delay: 1.6s;
                           transform: scale(1);
                           opacity: 1;
-                          transition-delay: 1.6s;
                         }
                       }
                     }
@@ -141,18 +148,18 @@ body {
                 }
 
                 & ~ .indicator {
-                  transition: 0.3s ease-in-out;
                   height: 100%;
+                  transition: 0.3s ease-in-out;
                   transform: translateY(0);
-                  background: $b;
+                  background-color: $b;
                 }
 
                 & ~ .inner .content {
                   &:nth-of-type(#{$i}) {
                     p {
+                      padding-top: 300px;
                       transition: padding-top 300ms cubic-bezier(1, 0.885, 0.72, 1);
                       transition-delay: 0s;
-                      padding-top: 300px;
                     }
                   }
                 }
@@ -163,97 +170,92 @@ body {
       }
     }
 
-    .frame {
+    section {
       position: absolute;
-      width: 100%;
-      height: 100%;
       top: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
       transition: transform 400ms cubic-bezier(1, 0.385, 0.42, 1);
       background: linear-gradient(to right, #fff 10%, $y 10%);
 
       &:after {
-        content: '';
         position: absolute;
+        left: 100%;
         width: 50%;
         height: 100%;
-        background: linear-gradient(to right, $o 50%, $r 50%);
-        left: 100%;
+        content: '';
         transition: transform 400ms cubic-bezier(1, 0.385, 0.42, 1);
+        background: linear-gradient(to right, $o 50%, $r 50%);
       }
 
       .box {
         position: absolute;
-        width: 100%;
-        height: 100%;
         z-index: 999;
         left: 150%;
-        color: #fff;
         overflow: hidden;
+        width: 100%;
+        height: 100%;
+        color: #fff;
 
         .internal {
           position: absolute;
-          width: 100%;
-          height: 100%;
           top: 0;
           left: 0;
+          width: 100%;
+          height: 100%;
           padding: 10% 20%;
 
           .image {
             position: absolute;
-            width: 100%;
-            height: 50%;
-            background-image: url('https://puu.sh/Ddl4B/c78b869b7a.jpg');
+            z-index: -1;
             bottom: 0;
             left: 0;
-            background-size: cover;
-            background-position: bottom;
-            z-index: -1;
+            width: 100%;
+            height: 50%;
             transition: 4s ease-in-out;
+            background-image: url(../img/internal.jpg);
+            background-position: bottom;
+            background-size: cover;
 
             &:before {
-              content: '';
               position: absolute;
+              top: 0;
+              left: 0;
               width: 100%;
               height: 200%;
-              left: 0;
-              top: 0;
-              background: linear-gradient(
-                  to bottom,
-                  $b 50%,
-                  rgba(255, 255, 255, 0.001) 150%
-              );
+              content: '';
               transition: 4s ease-in-out;
+              background: linear-gradient(to bottom, $b 50%, rgba(255, 255, 255, 0.001) 150%);
             }
           }
         }
 
         p {
-          transform: translateX(500px) skewX(-30deg);
           transition: transform 400ms cubic-bezier(1, 0.385, 0.82, 1);
+          transform: translateX(600px) skewX(-30deg);
           font-size: 18px;
           line-height: 1.5;
 
           &:before {
-            content: '';
             position: absolute;
-            width: 120%;
-            height: 120%;
             top: -10%;
             left: -10%;
-            box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15),
-            0 10px 20px -5px darken($b, 2.5%);
-            opacity: 0;
-            transform: scale(1.5);
+            width: 120%;
+            height: 120%;
+            content: '';
             transition: 0.75s ease-in-out;
+            transform: scale(1.5);
+            opacity: 0;
+            box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0.15), 0 10px 20px -5px darken($b, 2.5%);
           }
         }
       }
     }
 
     input {
-      opacity: 0;
       z-index: 999;
+      opacity: 0;
       @for $i from 1 through 3 {
         &:nth-of-type(#{$i}) {
           &:hover {
@@ -270,9 +272,9 @@ body {
             & ~ .nav {
               &:nth-of-type(#{$i}) {
                 &:before {
-                  color: #fff;
-                  transform: translate(-50%, -50%) rotate(-90deg) scale(1.2);
                   transition-delay: 0.1s;
+                  transform: translate(-50%, -50%) rotate(-90deg) scale(1.2);
+                  color: #fff;
                 }
               }
             }
@@ -312,8 +314,8 @@ body {
                     }
 
                     .image {
-                      opacity: 1;
                       transform: scale(1);
+                      opacity: 1;
                     }
                   }
                 }
@@ -337,8 +339,7 @@ body {
                             @for $j from 1 through 15 {
                               &:nth-of-type(#{$j}) {
                                 transition: transform 200ms cubic-bezier(0.175, 0.885, 0.32, 1.275);
-                                transition-delay: #{(($i + ($j/2.5)) / 20) +
-                                  1.5}s;
+                                transition-delay: #{(($i + ($j/2.5)) / 20) + 1.5}s;
                                 transform: scale(1) rotate(0deg);
                               }
                             }
@@ -368,11 +369,11 @@ body {
     input[type='radio'],
     .nav,
     .indicator {
-      height: 33.33%;
       position: absolute;
-      width: 10%;
       left: 0;
-      box-shadow: inset 0 0 0 2px $b;
+      width: 10%;
+      height: 33.33%;
+      box-shadow: inset 0 0 0 1px $b;
       @for $i from 1 through 3 {
         &:nth-of-type(#{$i}) {
           top: #{($i - 1) * 33.33%};
@@ -384,71 +385,71 @@ body {
       z-index: 2;
 
       &:nth-of-type(2) {
-        box-shadow: inset -2px 0 0 $b, inset 2px 0 0 $b;
+        box-shadow: inset -1px 0 0 $b, inset 1px 0 0 $b;
 
         &:before {
-          content: 'TWO';
+          content: 'TECHNICAL SUMMARY';
         }
       }
 
       &:nth-of-type(3) {
         &:before {
-          content: 'THREE';
+          content: 'WORK EXPERIENCE';
         }
       }
 
       &:before {
-        content: 'ONE';
         position: absolute;
-        display: inline-block;
-        color: $b;
         top: 50%;
         left: 50%;
-        transform: translate(-50%, -50%) rotate(-90deg);
+        display: inline-block;
+        content: 'PERSONAL DATA';
         transition: all 200ms cubic-bezier(1, 0.885, 0.32, 1);
+        transform: translate(-50%, -50%) rotate(-90deg);
+        color: $b;
       }
     }
 
     .indicator {
-      background: $g;
-      transition: all 200ms cubic-bezier(1, 0.885, 0.32, 1);
       z-index: 0;
+      transition: all 200ms cubic-bezier(1, 0.885, 0.32, 1);
+      background-color: $g;
       box-shadow: none;
     }
 
     .inner {
       position: absolute;
-      width: 90%;
-      left: 10%;
       top: 0;
+      left: 10%;
       overflow: hidden;
+      width: 90%;
       height: 100%;
 
       .images {
         position: absolute;
-        width: 100%;
-        height: 100%;
         bottom: 50%;
         overflow: hidden;
+        width: 100%;
+        height: 100%;
         transition: all 300ms cubic-bezier(1, 0.885, 0.72, 1);
 
         div:not(.image) {
           position: absolute;
+          z-index: 0;
           width: 100%;
           height: 100%;
-          z-index: 0;
 
           &:before {
-            content: '';
             position: absolute;
+            z-index: 2;
+            top: 100%;
+            left: 0;
             width: 100%;
             height: 200%;
-            left: 0;
-            top: 100%;
-            background: $o;
+            content: '';
             transform: translateY(100%);
-            z-index: 2;
             opacity: 0;
+            background-color: $o;
           }
 
           &:nth-of-type(2) {
@@ -464,79 +465,81 @@ body {
           }
 
           .image {
-            width: 100%;
-            height: 50%;
             position: absolute;
+            z-index: -1;
             bottom: 0;
             left: 0;
-            z-index: -1;
-            background-image: url('https://puu.sh/DdbZq/8577c8d00c.jpg');
-            opacity: 0;
-            transform: scale(1.5) rotate(-15deg);
+            width: 100%;
+            height: 50%;
             transition: opacity 1s ease-in-out, transform 2s ease-in-out;
             transition-delay: 1s, 1s;
-            background-size: cover;
+            transform: scale(1.5) rotate(-15deg);
+            opacity: 0;
+            background-image: url('../img/mojave.jpg');
             background-position: center;
+            background-size: cover;
           }
         }
       }
 
       .content {
         position: absolute;
+        z-index: 2;
+        top: 50%;
+        left: 0;
+        overflow: hidden;
         width: 100%;
         height: 50%;
-        left: 0;
-        top: 50%;
-        overflow: hidden;
-        z-index: 2;
         transition: all 300ms cubic-bezier(1, 0.885, 0.72, 1);
+
+        &:first-child {
+          overflow: initial;
+        }
       }
 
       h1 {
-        display: inline-block;
         position: relative;
-        width: auto;
-        color: #fff;
         z-index: 1;
+        display: inline-block;
+        overflow: hidden;
         width: 100%;
-        opacity: 1;
         margin: 0;
         padding: 5%;
-        overflow: hidden;
-        font-family: 'Lora';
-        font-weight: 100;
+        opacity: 1;
+        color: #fff;
+        font-size: 2rem;
 
         &:after {
-          content: '';
           position: absolute;
-          box-shadow: inset 0 -2px $r, inset 0 2px $r;
+          z-index: -1;
+          top: 0;
+          left: -20%;
           width: 140%;
           height: 100%;
-          left: -20%;
-          top: 0%;
-          z-index: -1;
+          content: '';
           transition: all 500ms cubic-bezier(1, 0.885, 0.32, 1);
           transform: scaleX(0);
           transform-origin: right;
+          box-shadow: inset 0 -2px $r, inset 0 2px $r;
         }
 
         &:before {
-          content: '';
           position: absolute;
+          z-index: -1;
+          top: 0;
+          left: -20%;
           width: 140%;
           height: 100%;
-          left: -20%;
-          top: 0%;
-          background: $r;
-          z-index: -1;
+          content: '';
           transition: all 300ms cubic-bezier(1, 0.885, 0.32, 1);
           transform: scaleX(0);
           transform-origin: left;
+          background-color: $r;
         }
 
         span {
-          display: inline-block;
           position: relative;
+          display: inline-block;
 
           &.char {
             transform: scale(0) rotate(-30deg);
@@ -549,52 +552,53 @@ body {
       }
 
       .content p {
-        transform: rotate(20deg) translateY(300px);
-        transition: transform 200ms cubic-bezier(1, 0.885, 0.72, 1);
-        transform-origin: left;
         display: inline-block;
         max-width: 90%;
         margin: 2.5% 5%;
+        transition: transform 200ms cubic-bezier(1, 0.885, 0.72, 1);
+        transform: rotate(20deg) translateY(300px);
+        transform-origin: left;
+        font-size: 18px;
         line-height: 1.5;
         color: #333;
-        font-size: 18px;
       }
     }
   }
 
   .more,
-  .back {
+  .back,
+  .cv {
     position: absolute;
     z-index: 5;
-    bottom: 10px;
     right: 10px;
-    height: 50px;
-    width: 50px;
+    bottom: 10px;
     display: inline-block;
+    width: 50px;
+    height: 50px;
 
     b {
       position: absolute;
-      font-family: 'Lora';
+      top: 0;
+      left: 0;
+      transition: transform 100ms cubic-bezier(1, 0.885, 0.72, 1.25);
+      transform: scale(0);
+      font-family: 'Lora', serif;
       font-size: 30px;
       color: $r;
-      left: 0;
-      top: 0;
-      transform: scale(0);
-      transition: transform 100ms cubic-bezier(1, 0.885, 0.72, 1.25);
 
       &:before,
       &:after {
-        content: '';
         position: absolute;
+        z-index: -1;
+        top: calc(50% - 20px);
+        left: calc(50% - 20px);
         width: 35px;
         height: 35px;
-        border: 2px solid $r;
-        border-radius: 100%;
-        z-index: -1;
-        left: calc(50% - 20px);
-        top: calc(50% - 20px);
+        content: '';
         transition: 0.2s ease-in-out;
         transform: scale(1.2);
+        border: 2px solid $r;
+        border-radius: 100%;
       }
     }
   }
@@ -607,5 +611,27 @@ body {
     &:after {
       border-color: #fff;
     }
+  }
+
+  .cv {
+    right: 10px;
+    left: auto;
+    bottom: auto;
+    top: 30px;
+
+    b {
+      transform: none;
+      font-size: 20px;
+      color: white;
+
+      &:before,
+      &:after {
+        border-color: white;
+      }
+    }
+  }
+
+  small {
+    padding-left: 1rem;
   }
 }
